--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "protractor": "^2.1.0",
     "shelljs": "^0.2.6"
   },
+  "dependencies": {
+  "bower": "^1.3.1"
+  },
   "scripts": {
     "postinstall": "bower install",
 
-    "prestart": "npm install",
+    "prestart": "npm install -g http-server",
     "start": "http-server ./app -a localhost -p 8000 -c-1",
 
     "pretest": "npm install",
